--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ install:
   - pip install -r requirements.txt
 script:
   - nosetests -dsv --with-yanc --with-coverage --cover-package tabela_fipe tests/test_*.py
+services:
+  - redis-server
