new version for pypi.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
+*.egg-info/
 *.pyc
-*.swp
+*~
+.*.sw?
 .coverage
-build/
-dist/
-sxtools.egg-info/*
+.directory
+.env
+.idea
+.cache
+nohup.out
+.tox
+MANIFEST
+build/*
+dist/*
+reg_settings.py
