--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: python
 python:
+  - "2.6"
   - "2.7"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.6"
 install:
   - pip install -r requirements.txt
 script:
-  - nosetests -dsv --with-yanc --with-coverage --cover-package . tests/test_*.py
-services:
-  - redis-server
+  - py.test tests
